--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,11 @@
 apply plugin: "java"
 apply plugin: "maven"
-apply plugin: "maven-publish"
+//apply plugin: "maven-publish"
 apply plugin: 'signing'
 
 group = 'com.notikumi'
 version = '0.6'
+archivesBaseName = "bananaj"
 
 description = 'A simple MailChimp API wrapper written in Java'
 
@@ -43,30 +44,34 @@ task fatJar(type: Jar) {
     with jar
 }
 
-/*
-publishing {
-    publications {
-        mavenJava(MavenPublication) {
-            from components.java
+artifacts {
+    archives javadocJar, sourcesJar
+}
 
-            artifact javadocJar
-            artifact sourcesJar
+uploadArchives {
+    repositories {
+        mavenDeployer {
+            beforeDeployment { MavenDeployment deployment -> signing.signPom(deployment) }
 
-            pom {
-                name = 'bananaj'
-                description = 'A simple MailChimp API wrapper written in Java'
-                url = 'https://github.com/notikumi/bananaj'
-                
+            repository(url: "https://oss.sonatype.org/service/local/staging/deploy/maven2/") {
+                authentication(userName: ossrhUsername, password: ossrhPassword)
+            }
+
+            snapshotRepository(url: "https://oss.sonatype.org/content/repositories/snapshots/") {
+                authentication(userName: ossrhUsername, password: ossrhPassword)
+            }
+
+            pom.project {
+                name 'bananaj'
+                packaging 'jar'
+                // optionally artifactId can be defined here
+                description 'A simple MailChimp API wrapper written in Java'
+                url 'https://github.com/notikumi/bananaj'
+
                 licenses {
                     license {
                         name = 'MIT'
                         url = 'https://raw.githubusercontent.com/alexanderwe/bananaj/master/LICENSE.md'
-                    }
-                }
-                developers {
-                    developer {
-                        name = 'Alexander Weiß'
-                        email = 'https://www.github.com/alexanderwe'
                     }
                 }
                 scm {
@@ -78,23 +83,22 @@ publishing {
                     url = 'https://github.com/notikumi/bananaj/issues'
                     system = 'GitHub'
                 }
-            }
-        }
-    }
-    repositories {
-        maven {
-            url 'https://oss.sonatype.org/service/local/staging/deploy/maven2/'
-            credentials {
-                username ossrhUsername
-                password ossrhPassword
+
+                developers {
+                    developer {
+                        id 'CanosGandia'
+                        name 'David CAnos'
+                        email 'davidcanos@gmail.com'
+                    }
+                }
             }
         }
     }
 }
-
 
 signing {
-    sign publishing.publications.mavenJava
+    //sign publishing.publications.mavenJava
+    sign configurations.archives
 }
 
-*/
+
